simplify status settings.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,9 @@ set -g default-shell /usr/bin/fish
 set -g escape-time 0
 set -g focus-events on
 set -g default-terminal "xterm-256color"
-set -gw xterm-keys on
+set -g xterm-keys on
 set -g base-index 1
-set -gw pane-base-index 1
-set -gw automatic-rename on
+set -g pane-base-index 1
+set -g automatic-rename on
 set-hook -g after-new-session 'if -F "#{==:#{session_name},emacs}" "source ~/.tmux/.tmux.conf.emacs" "source ~/.tmux/.tmux.conf.amos"'
 set-hook -g after-new-window 'if -F "#{==:#{session_name},emacs}" "source ~/.tmux/.tmux.conf.emacs" "source ~/.tmux/.tmux.conf.amos"'
