add emacs paging key and compliant fzf.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,6 @@
-set -g default-shell /usr/bin/fish
+set -g default-shell /home/amos/bin/fish
 set -g escape-time 0
 set -g focus-events on
-set -g default-terminal "xterm-256color"
 set -g xterm-keys on
 set -g base-index 1
 set -g pane-base-index 1
