--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-tmux-256color"
 set -g escape-time 0
 set -g focus-events on
 set -g xterm-keys on
