--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g automatic-rename on
 set -g aggressive-resize on
+set -g visual-bell off
 
 set-hook -g after-new-session 'if -F "#{==:#{session_name},emacs}" "source ~/.tmux/.tmux.conf.emacs" "source ~/.tmux/.tmux.conf.amos"'
 set-hook -g after-new-window 'if -F "#{==:#{session_name},emacs}" "source ~/.tmux/.tmux.conf.emacs" "source ~/.tmux/.tmux.conf.amos"'
